# example-aiagent

./: .gitignore  README.md
aiagent-api/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
aiagent-api/deploy/yc/: .gitignore  aiagent-api-container.tf  deploy.sh  iam.tf  providers.tf  variables.tf
aiagent-api/src/: aiagent_api.py  aiagent_service.py  prompt_processor.py  stub_service.py
aiagent-gui/: .gitignore  README.md  app.json  package.json  tsconfig.json
aiagent-gui/app/: _layout.tsx  index.tsx
aiagent-gui/app/styles/: global_styles.ts
