[project]
name = "aiagent_api"
version = "0.1.0"
description = "FastAPI Question Answering API"
authors = [
    {name = "Dmitry Pukhov", email = "dmitry.pukhov@gmail.com"}
]
requires-python = ">=3.12"
readme = "README.md"
#license = {text = "MIT"}

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "anyio>=4.0.0",
    "openai>=1.0.0",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["uv>=0.1.0", "setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"
#
#[tool.uv.settings]
#link-mode = "clone"
#
#[tool.uv.run]
#host = "0.0.0.0"
#port = 8000
#reload = true